force-app/main/default/objects/Agent__c/fields/AgencyAddress__c.field-meta.xml
<CustomField>
    <fullName>AgencyAddress__c</fullName>
    <label>Agency Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>