force-app/main/default/objects/Agent__c/fields/AgencyContractNo__c.field-meta.xml
<CustomField>
    <fullName>AgencyContractNo__c</fullName>
    <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
    <label>Agency Contract No.</label>
    <type>AutoNumber</type>
</CustomField>