force-app/main/default/objects/Agent__c/fields/AgencyEmail__c.field-meta.xml
<CustomField>
    <fullName>AgencyEmail__c</fullName>
    <label>Agency Email</label>
    <type>Email</type>
</CustomField>