force-app/main/default/objects/Agent__c/fields/AgencyPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>AgencyPhoneNumber__c</fullName>
    <label>Agency Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>