force-app/main/default/objects/Agent__c/fields/AgencyType__c.field-meta.xml
<CustomField>
    <fullName>AgencyType__c</fullName>
    <label>Agency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent - Local</fullName>
            </value>
            <value>
                <fullName>Agent - International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>