force-app/main/default/objects/Agent__c/fields/CompanyTaxID__c.field-meta.xml
<CustomField>
    <fullName>CompanyTaxID__c</fullName>
    <label>Company Tax ID</label>
    <length>13</length>
    <type>Text</type>
</CustomField>