force-app/main/default/objects/Agent__c/fields/ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson__c</fullName>
    <inlineHelpText>Contact person of Agency</inlineHelpText>
    <label>Contact Person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>