force-app/main/default/objects/Agent__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <description>The final date on which the agreement or contract between an agency and the contracting party is valid.</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>