force-app/main/default/objects/Agent__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <description>The date when the official agreement or contract between an agency and the contracting party begins.</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>