force-app/main/default/objects/Agent__c/validationRules/AgencyStartDateBeforeEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>AgencyStartDateBeforeEndDate</fullName>
    <active>true</active>
    <description>Agency Contract Start Date must be less than End Date. Please correct the dates.</description>
    <errorConditionFormula>ContractStartDate__c &gt;= ContractEndDate__c</errorConditionFormula>
    <errorMessage>Agency Contract Start Date must be less than End Date. Please correct the dates.</errorMessage>
</ValidationRule>