force-app/main/default/objects/Agent__c/validationRules/CheckAgencyPhoneNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAgencyPhoneNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(
ISBLANK( AgencyPhoneNumber__c )
),
OR(
NOT(
REGEX(AgencyPhoneNumber__c , &quot;^(\\+?\\(?[0-9]+\\)?[0-9]{8,9})$&quot;)
),
AND(
LEFT(AgencyPhoneNumber__c , 1) = &quot;0&quot;,
NOT(
OR(
LEN(AgencyPhoneNumber__c ) = 9,
LEN(AgencyPhoneNumber__c ) = 10
)
)
)
)
)</errorConditionFormula>
    <errorDisplayField>AgencyPhoneNumber__c</errorDisplayField>
    <errorMessage>Please check a valid Phone Number.</errorMessage>
</ValidationRule>