force-app/main/default/objects/Agent__c/validationRules/RequireCommissionRateWhenActive.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireCommissionRateWhenActive</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( ContractStatus__c , &quot;Contract Signed&quot;) &amp;&amp; ISBLANK( CommissionRate__c )</errorConditionFormula>
    <errorDisplayField>CommissionRate__c</errorDisplayField>
    <errorMessage>Please enter a Commission Rate when the Contract Status is &apos;Contract Signed&apos;.</errorMessage>
</ValidationRule>