force-app/main/default/objects/Agent__c/validationRules/TaxIDValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TaxIDValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
   REGEX(CompanyTaxID__c, &quot;^[0-9]{10,13}$&quot;)
)</errorConditionFormula>
    <errorDisplayField>CompanyTaxID__c</errorDisplayField>
    <errorMessage>Tax ID must be a number between 10 and 13 digits.</errorMessage>
</ValidationRule>