force-app/main/default/objects/Agent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AgencyContractNo__c</columns>
    <columns>AgencyType__c</columns>
    <columns>ContractStatus__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>ContractEndDate__c</columns>
    <columns>CommissionRate__c</columns>
    <columns>AgencyEmail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>